# docker-socket-proxy

./: .copier-answers.autopretty.yml  .copier-answers.image-template.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  gen_cfg_section.py  haproxy.cfg  multi-arch-manifest-tmpl.yml  pyproject.toml  pytest.ini  start-haproxy.sh  start.sh  verify.lua
.github/workflows/: ci.yml  pre-commit.yml  test.yaml
hooks/: build  post_push
tests/: conftest.py  run_tests.sh  test_service.py
