[tool.poetry]
name = "docker-socket-proxy"
version = "0.0.0"
description = ""
authors = ["Tecnativa"]
package-mode = false  # This is a tool, not a library

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
plumbum = "^1.9.0"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
